--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
     <!-- Hero Section -->
     <section id="inicio" class="hero">
         <div class="hero-content">
+            <p style="font-size: 1.2rem; margin-bottom: 1rem; opacity: 0.9; font-weight: 500;">Especialización en Desarrollo de Software</p>
             <h1>Compilar Seguro</h1>
             <p class="subtitle">Del código a un pipeline con controles que sí bloquean</p>
             <div class="author-info">
